--- a/MarcosOCRProject/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/MarcosOCRProject/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -6,8 +6,8 @@ li .glyphicon {
 li.link-active a,
 li.link-active a:hover,
 li.link-active a:focus {
-    background-color: #4189C7;
-    color: white;
+    background-color: lightgray;
+    color: #444;
 }
 
 /* Keep the nav menu independent of scrolling and on top of other items */
@@ -16,8 +16,9 @@ li.link-active a:focus {
     top: 0;
     left: 0;
     right: 0;
-    z-index: 1;
+    z-index: 1;   
 }
+
 
 @media (min-width: 768px) {
     /* On small screens, convert the nav menu to a vertical sidebar */
@@ -56,4 +57,9 @@ li.link-active a:focus {
         overflow: hidden;
         text-overflow: ellipsis;
     }
+}
+
+.navbar {
+    background-color: #b1ffe5;
+    width: 200px;
 }
