--- a/MarcosOCRProject/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/MarcosOCRProject/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,5 +1,5 @@
 <div class='main-nav'>
-    <div class='navbar navbar-inverse'>
+    <div class='navbar '>
         <div class='navbar-header'>
             <button type='button' class='navbar-toggle' data-toggle='collapse' data-target='.navbar-collapse' [attr.aria-expanded]='isExpanded' (click)='toggle()'>
                 <span class='sr-only'>Toggle navigation</span>
@@ -11,25 +11,25 @@
         </div>
         <div class='clearfix'></div>
         <div class='navbar-collapse collapse' [ngClass]='{ "in": isExpanded }'>
-            <ul class='nav navbar-nav'>
+            <ul class='nav navbar-nav nav-txt-color'>
                 <li [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
-                    <a [routerLink]='["/"]' (click)='collapse()'>
-                        <span class='glyphicon glyphicon-home'></span> Home
+                    <a [routerLink]='["/"]' (click)='collapse()' class="d-flex justify-content-center">
+                        <span class='glyphicon glyphicon-home'></span> 
                     </a>
                 </li>
-                <li [routerLinkActive]='["link-active"]'>
+                <li [routerLinkActive]='["link-active"]' class="d-flex justify-content-center">
                     <a [routerLink]='["/counter"]' (click)='collapse()'>
-                        <span class='glyphicon glyphicon-education'></span> Counter
+                        <span class='glyphicon glyphicon-education'></span> 
                     </a>
                 </li>
-              <li [routerLinkActive]='["link-active"]'>
+              <li [routerLinkActive]='["link-active"]' class="d-flex justify-content-center">
                 <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
-                  <span class='glyphicon glyphicon-th-list'></span> Fetch data
+                  <span class='glyphicon glyphicon-th-list'></span>
                 </a>
               </li>
-              <li [routerLinkActive]='["link-active"]'>
+              <li [routerLinkActive]='["link-active"]' class="d-flex justify-content-center">
                 <a [routerLink]='["/upload"]' (click)='collapse()'>
-                  <span class='glyphicon glyphicon-upload'></span> Upload
+                  <span class='glyphicon glyphicon-upload'></span> 
                 </a>
               </li>
             </ul>
